# libslab-mate

./: ChangeLog.old  Makefile.am  NEWS  TODO-standalone-library.txt  autogen.sh  configure.ac  libslab.doap  libslab.pc.in
libslab/: Makefile.am  app-resizer.c  app-shell-startup.c  app-shell.c  app-shell.h  application-tile.c  bookmark-agent.c  directory-tile.c  document-tile.c  gnome-utils.c  libslab-utils.c  libslab-utils.h  mate-utils.c  nameplate-tile.c  search-bar.c  search-context-picker.c  search-entry.c  shell-window.c  slab-section.c  system-tile.c  tile.c
po/: LINGUAS  POTFILES.in  ar.po  br.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hu.po  id.po  it.po  ja.po  ka.po  lo.po  lt.po  lv.po  mk.po  mr.po  nb.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  ta.po  zh_CN.po
